--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <div class="audio-list">
             <div class="audio-item">
                 <audio controls>
-                    <source src="wavs/BanglaTTS/BanglaTTS_1.wav" type="audio/wav">
+                    <source src="https://github.com/iamshreeji-copy1/MADD_journal_paper/blob/a49345d4692238dd31788187af06aa153d4627e8/wavs/BanglaTTS/BanglaTTS_1.wav" type="audio/wav">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="audio-item">
                 <audio controls>
-                    <source src="wavs/BanglaTTS/BanglaTTS_2.wav" type="audio/wav">
+                    <source src="https://github.com/iamshreeji-copy1/MADD_journal_paper/blob/a49345d4692238dd31788187af06aa153d4627e8/wavs/BanglaTTS/BanglaTTS_1.wav" type="audio/wav">
                     Your browser does not support the audio element.
                 </audio>
             </div>
