--- a/index.html
+++ b/index.html
@@ -113,39 +113,14 @@
     </div>
     <div class="audio-container">
         <h2>SileroTTS</h2>
-        <div class="audio-list">
-            <div class="audio-item">
-                <audio controls>
-                    <source src="wavs/SileroTTS/SileroTTS_1.wav" type="audio/wav">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="audio-item">
-                <audio controls>
-                    <source src="wavs/SileroTTS/SileroTTS_2.wav" type="audio/wav">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="audio-item">
-                <audio controls>
-                    <source src="wavs/SileroTTS/SileroTTS_3.wav" type="audio/wav">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="audio-item">
-                <audio controls>
-                    <source src="wavs/SileroTTS/SileroTTS_4.wav" type="audio/wav">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="audio-item">
-                <audio controls>
-                    <source src="wavs/SileroTTS/SileroTTS_5.wav" type="audio/wav">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </div>
-    </div>
+      <tr>
+  <td nowrap width="160">SileroTTS</td>
+  <td><audio controls preload="none"><source src="wavs/SileroTTS/SileroTTS_1.wav" type="audio/wav"></audio></td>
+  <td><audio controls preload="none"><source src="wavs/SileroTTS/SileroTTS_2.wav" type="audio/wav"></audio></td>
+  <td><audio controls preload="none"><source src="wavs/SileroTTS/SileroTTS_3.wav" type="audio/wav"></audio></td>
+  <td><audio controls preload="none"><source src="wavs/SileroTTS/SileroTTS_4.wav" type="audio/wav"></audio></td>
+  <td><audio controls preload="none"><source src="wavs/SileroTTS/SileroTTS_5.wav" type="audio/wav"></audio></td>
+</tr> </div>
     <div class="audio-container">
         <h2>bark_deepfakes</h2>
         <div class="audio-list">
