--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
                   <td><audio controls="" preload="none"><source src="wavs/BanglaTTS/BanglaTTS_5.wav"></audio></td>
           
         </tr>
+
+                <tr>
+          <td nowrap width="160">Ground Truth</td>
+          <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_1.wav"></audio></td>
+                 <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_2.wav"></audio></td>
+                 <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_3.wav"></audio></td>
+                 <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_4.wav"></audio></td>
+                 <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_5.wav"></audio></td>
+        </tr>
 <!--         <tr>
           <td nowrap>HiFi-GAN V3 (ours)
           <td><audio controls="" preload="none"><source src="samples/ss/HGAN_V3/ss_hgan_v3_1.wav"></audio></td>
