--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <table>
         <tbody>
         <tr>
-          <td nowrap width="160">Ground Truth</td>
+          <td nowrap width="160">BanglaTTS</td>
           <td><audio controls="" preload="none"><source src="wavs/BanglaTTS/BanglaTTS_1.wav"></audio></td>
                     <td><audio controls="" preload="none"><source src="wavs/BanglaTTS/BanglaTTS_2.wav"></audio></td>
                   <td><audio controls="" preload="none"><source src="wavs/BanglaTTS/BanglaTTS_3.wav"></audio></td>
@@ -53,7 +53,7 @@
         </tr>
 
                 <tr>
-          <td nowrap width="160">Ground Truth</td>
+          <td nowrap width="160">BigVGAN</td>
           <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_1.wav"></audio></td>
                  <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_2.wav"></audio></td>
                  <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_3.wav"></audio></td>
