--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </tr>
         <tr>
           <td nowrap width="160">BigVGAN</td>
+            wavs/BigV/BigV_1.wav
           <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_1.wav"></audio></td>
           <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_2.wav"></audio></td>
           <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_3.wav"></audio></td>
