--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
         <tbody>
         <tr>
           <td nowrap width="160">BanglaTTS</td>
-          <td><audio controls="" preload="none"><source src="wavs/BanglaTTS/BanglaTTS_1.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/BanglaTTS/BanglaTTS_2.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/BanglaTTS/BanglaTTS_3.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/BanglaTTS/BanglaTTS_4.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/BanglaTTS/BanglaTTS_5.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="mp3s/BanglaTTS/BanglaTTS_1.mp3"></audio></td>
+        <td><audio controls="" preload="none"><source src="mp3s/BanglaTTS/BanglaTTS_2.mp3"></audio></td>
+            <td><audio controls="" preload="none"><source src="mp3s/BanglaTTS/BanglaTTS_3.mp3"></audio></td>
+            <td><audio controls="" preload="none"><source src="mp3s/BanglaTTS/BanglaTTS_4.mp3"></audio></td>
+            <td><audio controls="" preload="none"><source src="mp3s/BanglaTTS/BanglaTTS_5.mp3"></audio></td>
         </tr>
         <tr>
           <td nowrap width="160">BigVGAN</td>
             wavs/BigV/BigV_1.wav
-          <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_1.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_2.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_3.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_4.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/BigV/BigV_5.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="mp3s/BigV/BigV_1.mp3"></audio></td>
+          <td><audio controls="" preload="none"><source src="mp3s/BigV/BigV_2.mp3"></audio></td>
+          <td><audio controls="" preload="none"><source src="mp3s/BigV/BigV_3.mp3"></audio></td>
+          <td><audio controls="" preload="none"><source src="mp3s/BigV/BigV_4.mp3"></audio></td>
+          <td><audio controls="" preload="none"><source src="mp3s/BigV/BigV_5.mp3"></audio></td>
         </tr>
         </tbody>
       </table>
