--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
       </header>
     </article>
 
-   <p class="toc_title">Contents</p>
+<!--    <p class="toc_title">Contents</p>
     <div id="toc_container">
     <ul>
       <li><a href="#ss"></a></li>
     </ul>
     </div>
-
+ -->
     <p>&nbsp;</p>
 
     <div>
-      <a name="ss"><h2>Single Speaker (LJ Speech Dataset)</h2></a>
+      <a name="ss"><h2>Deepfake Samples</h2></a>
       <hr>
       <table>
         <tbody>
