--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p>&nbsp;</p>
 
     <div>
-      <a name="ss"><h2>Deepfake Samples</h2></a>
+<!--       <a name="ss"><h2>Deepfake Samples</h2></a> -->
       <hr>
       <table>
         <tbody>
