--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Audio samples from "MADD"</title>
+    <title>Audio samples from "DeepFox"</title>
     <meta charset="UTF-8">
     <title>MADD</title>
     <style>
@@ -13,7 +13,7 @@
   <body>
     <article>
       <header>
-        <h1>Audio samples from "MADD"</h1>
+        <h1>Audio samples from "DeepFox"</h1>
       </header>
     </article>
 
