--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Audio samples from "DeepFox"</title>
+    <title>Audio samples from "DeepFox2.0"</title>
     <meta charset="UTF-8">
-    <title>MADD</title>
+    <title>DeepFox2.0</title>
     <style>
         red {color: red}
         audio {width: 250px}
@@ -13,7 +13,7 @@
   <body>
     <article>
       <header>
-        <h1>Audio samples from "DeepFox"</h1>
+        <h1>Audio samples from "DeepFox2.0"</h1>
       </header>
     </article>
 
@@ -47,7 +47,8 @@
           <td><audio controls="" preload="none"><source src="mp3s/BigV/BigV_4.mp3"></audio></td>
           <td><audio controls="" preload="none"><source src="mp3s/BigV/BigV_5.mp3"></audio></td>
         </tr> -->
-            <table border="1">
+            <table border="0">
+                
     <tr>
         <td nowrap width="160">BanglaTTS</td>
         <td><audio controls="" preload="none"><source src="mp3s/BanglaTTS/BanglaTTS_1.mp3"></audio></td>
